fixed portfolio on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,7 @@ button[type=submit] {
 
   /* project on portfolio.html */
   .work {
-    height: 180px;
+    height: auto;
   }
 
   /* resume button on contact.html */
